--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -12,10 +12,13 @@
   margin-bottom: 30px;
   font-weight: 700;
   font-size: 20px;
-  line-height: calc(23 / 20);
+  line-height: calc(30 / 20);
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--logo-header-black);
+  @media screen and (min-width: 1200px) {
+      line-height: calc(23 / 20);
+    }
 }
 
 .modal__labels {
@@ -164,10 +167,14 @@
 .modal__terms {
   user-select: none;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1,167;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
+  @media screen and (min-width:1200px) {
+    font-size: 14px;
+      line-height: 1.71;
+  }
 }
 
 .modal__terms-of-agreement {
