--- a/sass/components/_cards-set.scss
+++ b/sass/components/_cards-set.scss
@@ -6,7 +6,12 @@
 }
 
 .main__items {
+    width: 100%;
     flex-grow: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
+    @media screen and (min-width:768px) {
+        width: calc(50% - 15px);
+        
+    }
 }
 
 // MAIN LINKS
@@ -59,8 +64,15 @@
     background-color: var(--footer__address-hover);
     border: 1px solid #eeeeee;
     border-top: none;
+    @media screen and (min-width:768px) {
+            padding: 56px 24px;
+        }
 }
-
+.main__description--other-padd{
+    @media screen and (min-width:768px) {
+        padding-bottom: 20px;
+        }
+}
 .main__headline-descrip {
     margin-bottom: 4px;
     font-size: 18px;
