--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -37,6 +37,7 @@
 }
 // FOOTer INPUT
 .footer__input {
+    padding-left: 16px;
     width: 100%;
     height: 50px;
     outline: transparent;
@@ -46,7 +47,7 @@
     color: var(--footer__address-hover);
     transition: border var(--global-animation), filter var(--global-animation);
 @media screen and (min-width:1200px) {
-    padding-left: 16px;
+    
         width: 358px;
         
     
@@ -66,6 +67,7 @@
 }
 // FOOTER BTN
 .footer__btn {
+    margin: 0 auto;
     height: 50px;
     width: 200px;
     display: flex;
