--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -21,14 +21,20 @@
   position: absolute;
   bottom: 50%;
   left: 50%;
-  min-width: 530px;
-  min-height: 580px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: translate(-50%, 50%) scale(1);
   transition: transform var(--global-animation), opacity var(--global-animation);
   background-color: var(--footer__address-hover);
+  @media screen and (max-width: 1199px) {
+    min-width: 450px;
+    min-height: 609px;
+  }
+  @media screen and (min-width: 1200px) {
+    min-width: 530px;
+      min-height: 580px;
+  }
 }
 
 .modal__btn-close {
