--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -12,6 +12,23 @@
         text-align: left;
 }
 }
+.footer__tablet-container{
+    @media screen and (min-width:768px) {
+        justify-content: center;
+        display: flex;
+           gap: 165px;
+        flex-direction: row;
+        align-items: baseline;
+        }
+    @media screen and (max-width:1199px) {
+        margin-bottom: 60px;
+}
+@media screen and (min-width:1200px) {
+    gap: 70px;
+    
+}
+    }
+
 .footer__logo {
     color: var(--footer__logo-color);
 
@@ -64,17 +81,8 @@
         margin-bottom: 60px;
         
     }
-    @media screen and (min-width:1200px) {
-        margin-right: 70px;
-        
-    }
+    
 }
- .footer__wrap-networks{
-    @media screen and (max-width:1199px) {
-        margin-bottom: 60px;
-        
-    }
- }
 .footer__title {
     margin-bottom: 20px;
     color: var(--footer__address-hover);
