--- a/sass/layout/_task-section.scss
+++ b/sass/layout/_task-section.scss
@@ -18,9 +18,11 @@
     position: absolute;
     bottom: 0;
     display: flex;
-    padding: 27px 10px;
     width: 100%;
+    height: 70px;
     background-color: rgba(47, 48, 58, 0.8);
+    justify-content: center;
+    align-items: center;
 }
 
 &__text {
