--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,11 @@
 body {
   font-family: var(--main-font);
 }
+@media screen and (max-width: 767px) {
+  body.no-scroll {
+    overflow: hidden;
+  }
+}
 
 h1,
 h2,
@@ -289,6 +294,7 @@ a {
 
 .backdrop {
   position: fixed;
+  overflow: scroll;
   background-color: rgba(0, 0, 0, 0.2);
   top: 0;
   width: 100%;
@@ -311,29 +317,39 @@ a {
 
 .modal {
   position: absolute;
-  bottom: 50%;
+  top: 0;
   left: 50%;
+  max-width: 450px;
+  width: 100%;
+  max-height: 609px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  -webkit-transform: translate(-50%, 50%) scale(1);
-          transform: translate(-50%, 50%) scale(1);
+  -webkit-transform: translateX(-50%) scale(1);
+          transform: translateX(-50%) scale(1);
   -webkit-transition: opacity var(--global-animation), -webkit-transform var(--global-animation);
   transition: opacity var(--global-animation), -webkit-transform var(--global-animation);
   transition: transform var(--global-animation), opacity var(--global-animation);
   transition: transform var(--global-animation), opacity var(--global-animation), -webkit-transform var(--global-animation);
   background-color: var(--footer__address-hover);
 }
-@media screen and (max-width: 1199px) {
-  .modal {
-    min-width: 450px;
-    min-height: 609px;
-  }
-}
 @media screen and (min-width: 1200px) {
   .modal {
-    min-width: 530px;
-    min-height: 580px;
+    max-width: 528px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .modal {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 480px) and (min-height: 609px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
   }
 }
 
@@ -380,9 +396,7 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-top: 40px;
-  margin-left: 40px;
-  margin-right: 40px;
+  margin: 40px 40px;
 }
 
 .modal__strong {
@@ -681,9 +695,9 @@ a {
 .modal__submit {
   margin: 0 auto;
   margin-top: 30px;
-  width: 200px;
+  width: 100%;
   max-width: 200px;
-  padding: 10px 55px;
+  padding: 10px 0;
   border: none;
   background-color: var(--link-hover-text-color);
   font-weight: 700;
@@ -692,6 +706,9 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -954,6 +971,137 @@ a {
   line-height: 1.875;
   color: var(--main-text-color);
   letter-spacing: 0.03em;
+}
+
+.mobile-menu {
+  overflow: scroll;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 48px 40px;
+  position: fixed;
+  -webkit-transform: translateX(100%) scaleY(0.5);
+          transform: translateX(100%) scaleY(0.5);
+  -webkit-transition: -webkit-transform var(--global-animation);
+  transition: -webkit-transform var(--global-animation);
+  transition: transform var(--global-animation);
+  transition: transform var(--global-animation), -webkit-transform var(--global-animation);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--nav-bg-color);
+}
+.mobile-menu.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+.mobile-menu__close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  border: none;
+  background-color: transparent;
+}
+.mobile-menu__close-svg {
+  width: 40px;
+  height: 40px;
+  fill: currentColor;
+  -webkit-transition: fill var(--global-animation);
+  transition: fill var(--global-animation);
+}
+.mobile-menu__close-btn:hover .mobile-menu__close-svg, .mobile-menu__close-btn:focus .mobile-menu__close-svg {
+  fill: var(--link-hover-text-color);
+}
+
+.mobile-menu__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 32px;
+}
+
+.mobile-menu__links-nav {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  text-align: center;
+  letter-spacing: 0.02em;
+  -webkit-transition: color var(--global-animation);
+  transition: color var(--global-animation);
+}
+.mobile-menu__links-nav:hover, .mobile-menu__links-nav:focus {
+  color: var(--link-hover-text-color);
+}
+
+.mobile-menu__links-nav--active {
+  color: var(--link-hover-text-color);
+}
+
+.mobile-menu__contacts {
+  margin-bottom: 64px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 32px;
+}
+
+.mobile-menu__links-contacts {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.02em;
+  color: var(--main-text-color);
+}
+
+.mobile-menu__links-contacts--phone {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.1764705882;
+  letter-spacing: 0.02em;
+  color: var(--link-hover-text-color);
+}
+
+.mobile-menu__networks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 10px;
+}
+
+.mobile-menu__items-networks:not(:last-child) {
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mobile-menu__links-networks {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2222222222;
+  letter-spacing: 0.02em;
+  color: var(--link-hover-text-color);
 }
 
 .header {
