--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -1,6 +1,6 @@
 .backdrop {
   position: fixed;
-
+  overflow: scroll;
   background-color: rgba(0, 0, 0, 0.2);
   top: 0;
   width: 100%;
@@ -19,21 +19,32 @@
 }
 .modal {
   position: absolute;
-  bottom: 50%;
+  top: 0;
+  // bottom: 50%;
   left: 50%;
+  max-width: 450px;
+  width: 100%;
+    max-height: 609px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  transform: translate(-50%, 50%) scale(1);
+  transform: translateX(-50%) scale(1);
   transition: transform var(--global-animation), opacity var(--global-animation);
   background-color: var(--footer__address-hover);
-  @media screen and (max-width: 1199px) {
-    min-width: 450px;
-    min-height: 609px;
-  }
+
+ 
   @media screen and (min-width: 1200px) {
-    min-width: 530px;
-      min-height: 580px;
+    max-width: 528px;
+  }
+  @media screen and (max-width:450px) {
+    width: 100%;
+    
+  }
+  @media screen and (min-width:480px) and (min-height:609px) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
   }
 }
 
