--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
 @import './components/modal-form';
 @import './components/footer-form';
 @import './components/cards-set';
+@import './components/mobile-menu-header';
 
 // LAYOUT
 @import './layout/header'; 
