--- a/css/main.css
+++ b/css/main.css
@@ -891,6 +891,11 @@ a {
     width: calc(50% - 15px);
   }
 }
+@media screen and (min-width: 1200px) {
+  .main__items {
+    width: 370px;
+  }
+}
 
 .main__link {
   display: block;
@@ -951,7 +956,7 @@ a {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .main__description--other-padd {
     padding-bottom: 20px;
   }
