--- a/sass/components/_cards-set.scss
+++ b/sass/components/_cards-set.scss
@@ -12,6 +12,10 @@
         width: calc(50% - 15px);
         
     }
+    @media screen and (min-width:1200px) {
+        width: 370px;
+        
+    }
 }
 
 // MAIN LINKS
@@ -69,7 +73,7 @@
         }
 }
 .main__description--other-padd{
-    @media screen and (min-width:768px) {
+    @media screen and (max-width:768px) {
         padding-bottom: 20px;
         }
 }
