--- a/css/main.css
+++ b/css/main.css
@@ -1171,7 +1171,7 @@ a {
 }
 @media screen and (min-width: 1200px) {
   .hero {
-    padding: 200px 0;
+    padding: 200px 0 280px 0;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../photo/bg-img/img-1@1x_lg.jpg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../photo/bg-img/img-1@1x_lg.jpg);
   }
