--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -30,7 +30,7 @@
 
   // desktop screen
   @media screen and(min-width:1200px) {
-    padding: 200px 0;
+    padding: 200px 0 280px 0;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url(../photo/bg-img/img-1@1x_lg.jpg);
     @media (min-device-pixel-ratio: 2),
