--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -42,7 +42,11 @@
     margin-top: 20px;
     font-style: normal;
 
-}
+        @media screen and (max-width:767px) {
+            margin-bottom: 60px;
+        }
+    }
+
 
 .footer__location {
     color: var(--nav-bg-color);
