--- a/css/main.css
+++ b/css/main.css
@@ -928,7 +928,7 @@ a {
 
 .main__overlat-part {
   position: absolute;
-  padding: 63px 24px;
+  padding: 77px 24px;
   opacity: 0;
   width: 100%;
   height: 100%;
@@ -942,12 +942,34 @@ a {
   transition: transform var(--global-animation), opacity var(--global-animation);
   transition: transform var(--global-animation), opacity var(--global-animation), -webkit-transform var(--global-animation);
 }
+@media screen and (max-width: 479px) {
+  .main__overlat-part {
+    padding-bottom: 30px;
+    padding-top: 20px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .main__overlat-part {
+    padding-bottom: 77px;
+    padding-top: 49px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .main__overlat-part {
+    padding: 63px 24px;
+  }
+}
 
 .main__text {
   font-size: 18px;
   line-height: 1.5555555556;
   letter-spacing: 0.03em;
   color: var(--footer__address-hover);
+}
+@media screen and (max-width: 405px) {
+  .main__text {
+    font-size: 17px;
+  }
 }
 
 .main__description {
@@ -1078,7 +1100,7 @@ a {
 }
 @media screen and (min-height: 500px) {
   .mobile-menu__contacts {
-    margin-top: 30px;
+    margin-top: 30 px;
   }
 }
 
