--- a/sass/components/_cards-set.scss
+++ b/sass/components/_cards-set.scss
@@ -45,7 +45,7 @@
 
 .main__overlat-part {
     position: absolute;
-    padding: 63px 24px;
+    padding: 77px 24px;
     opacity: 0;
     width: 100%;
     height: 100%;
@@ -54,6 +54,21 @@
     background-color: rgba(33, 150, 243, 0.9);
     transform: translateY(100%);
     transition: transform var(--global-animation), opacity var(--global-animation);
+    
+    @media screen and (max-width:479px) {
+            padding-bottom: 30px;
+            padding-top: 20px;
+    
+        }
+    @media screen and (min-width:768px) {
+            padding-bottom: 77px;
+            padding-top: 49px;
+        
+    }
+    @media screen and (min-width:1200px) {
+      padding: 63px 24px;
+
+  }
 }
 
 .main__text {
@@ -61,6 +76,9 @@
     line-height: calc(28 / 18);
     letter-spacing: 0.03em;
     color: var(--footer__address-hover);
+    @media screen and (max-width:405px) {
+        font-size: 17px;
+        }
 }
 
 .main__description {
