--- a/css/main.css
+++ b/css/main.css
@@ -1657,6 +1657,8 @@ a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 .footer .footer__links {
   background-color: #44454e;
