--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -30,6 +30,7 @@
 
   // desktop screen
   @media screen and(min-width:1200px) {
+    max-width: 1600px;
     padding: 200px 0 280px 0;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url(../photo/bg-img/img-1@1x_lg.jpg);
@@ -39,6 +40,7 @@
             background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
                 url(../photo/bg-img/img-1@2x_lg.jpg);
   }}
+  
 
   .hero__headline {
     max-width: 360px;
