--- a/css/main.css
+++ b/css/main.css
@@ -983,10 +983,17 @@ a {
     font-size: 17px;
   }
 }
-@media screen and (min-width: 200px) and (max-width: 340px) {
+@media screen and (min-width: 200px) and (max-width: 307px) {
   .main__text {
     font-size: 14px;
     line-height: 1.2142857143;
+    letter-spacing: 0.02em;
+  }
+}
+@media screen and (min-width: 308px) and (max-width: 340px) {
+  .main__text {
+    font-size: 16px;
+    line-height: 1.1875;
     letter-spacing: 0.02em;
   }
 }
