--- a/sass/components/_cards-set.scss
+++ b/sass/components/_cards-set.scss
@@ -82,10 +82,15 @@
     @media screen and (max-width:405px) {
         font-size: 17px;
         }
-    @media screen and (min-width:200px) and (max-width:340px) {
+    @media screen and (min-width:200px) and (max-width:307px) {
         font-size: 14px;
         line-height: calc(17 / 14);
             letter-spacing: .02em;
+    }
+    @media screen and (min-width:308px) and (max-width:340px) {
+        font-size: 16px;
+        line-height: calc(19 / 16);
+        letter-spacing: .02em;
     }
 }
 
